feat(workflow): support workflow

--- a/configure/etc/conf/executor/clickhouse-sink.yaml
+++ b/configure/etc/conf/executor/clickhouse-sink.yaml
@@ -1,6 +1,7 @@
 id: clickhouse-sink
 label: Clickhouse
 key: Clickhouse
+tid: clickhouse-sink
 description: Clickhouse sink connector
 category: sink
 configure:
