--- a/configure/etc/conf/executor/clickhouse-source.yaml
+++ b/configure/etc/conf/executor/clickhouse-source.yaml
@@ -1,6 +1,7 @@
 id: clickhouse-source
 label: Clickhouse
 key: Clickhouse
+tid: clickhouse-source
 description: Clickhouse source connector
 category: source
 configure:
