feat(executor seatunnel): support custom node type

--- a/configure/etc/conf/executor/replace-transform.yaml
+++ b/configure/etc/conf/executor/replace-transform.yaml
@@ -1,6 +1,7 @@
 id: replace-transform
 label: Replace
 tid: replace-transform
+key: Replace
 description: Replace transform
 category: transform
 configure:
