--- a/test/datacap-test-condor/pom.xml
+++ b/test/datacap-test-condor/pom.xml
@@ -8,18 +8,21 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>datacap-condor</artifactId>
-    <description>DataCap - Database</description>
+    <artifactId>datacap-test-condor</artifactId>
+    <description>DataCap - Test - Condor</description>
 
     <dependencies>
         <dependency>
-            <groupId>io.edurt.datacap</groupId>
-            <artifactId>datacap-parser</artifactId>
-            <version>${project.version}</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>io.edurt.datacap</groupId>
+            <artifactId>datacap-condor</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
